samples/_failures_safe/1761722081_a181ec_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_15618d5b.c: In function ‘tokenize’:
./samples/SAFE/__tmp_15618d5b.c:162:9: error: expected declaration or statement at end of input
  162 |         tokens[token_count].line = line;
      |         ^~~~~~
./samples/SAFE/__tmp_15618d5b.c:162:9: error: expected declaration or statement at end of input
